pagina af behalve calendar

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="dir/css/animate.min.css">
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="dir/css/my-app.css">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,900,700,500,300,100' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
   </head>
 
   <body>
