--- a/app/www/index.html
+++ b/app/www/index.html
@@ -20,8 +20,9 @@
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="dir/css/my-app.css">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,900,700,500,300,100' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,900,700,500,300,100' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
   </head>
 
   <body>
@@ -45,6 +46,7 @@
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="dir/js/framework7.min.js"></script>
     <!-- Path to your app js-->
+    <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
     <script type="text/javascript" src="dir/js/my-app.js"></script>
 
   </body>
