account gedeelte aangepast

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -46,6 +46,7 @@
     <script type="text/javascript" src="dir/js/framework7.min.js"></script>
     <!-- Path to your app js-->
     <script type="text/javascript" src="dir/js/my-app.js"></script>
+    <script type="text/javascript" src="dir/js/jonathan.js"></script>
 
   </body>
 </html>
