Offline map werkt weer :)

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -46,8 +46,8 @@
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="dir/js/framework7.min.js"></script>
     <!-- Path to your app js-->
-    <script src="dir/js/leaflet_01.js"></script>
-    <!-- <script src="dir/js/leaflet.js"></script> -->
+    <!-- <script type="text/javascript" src="dir/js/leaflet_01.js"></script> -->
+    <script src="dir/js/leaflet.js"></script>
     <script type="text/javascript" src="dir/js/my-app.js"></script>
 
   </body>
