--- a/app/www/index.html
+++ b/app/www/index.html
@@ -23,6 +23,9 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,900,700,500,300,100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
     <link rel="stylesheet" href="dir/css/leaflet.css" />
+
+    <!-- MDI Icons -->
+    <link rel="stylesheet" type="text/css" href="dir/css/materialdesignicons.min.css">
   </head>
 
   <body>
@@ -48,6 +51,7 @@
     <!-- Path to your app js-->
     <!-- <script type="text/javascript" src="dir/js/leaflet_01.js"></script> -->
     <script src="dir/js/leaflet.js"></script>
+    <script type="text/javascript" src="dir/js/Leaflet.Icon.Glyph.js"></script>
     <script type="text/javascript" src="dir/js/my-app.js"></script>
 
   </body>
